# cupld

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MEMORY_EVAL_BENCHMARKS_PRD.md  README.md  SECURITY.md  WORKFLOW.md  dist-workspace.toml
.github/workflows/: ci.yml  publish-crates.yml  publish-homebrew.yml  release.yml
docs/: README.md
docs/agents/: README.md  visualise.md
skills/cupld-md-memory/: SKILL.md
src/: automation.rs  context.rs  json.rs  lib.rs  main.rs  mcp.rs  memory_eval.rs  memory_maintenance.rs  memory_report.rs  package.rs  regex_lite.rs  skill_install.rs  visualise.rs
src/engine/: graph.rs  ids.rs  mod.rs  properties.rs  schema.rs  state.rs  value.rs
src/install_mcp/: backup.rs  claude.rs  codex.rs  mod.rs  prompt.rs  state.rs
src/query/: mod.rs
src/runtime/: mod.rs
src/source/: markdown.rs  mod.rs
src/storage/: mod.rs
tests/: cli_db.rs  db_lifecycle.rs  dependency_free.rs  markdown_sync.rs  mcp.rs  skill_install.rs
tests/fixtures/: context_seeded_golden.json  context_seeded_golden.ndjson  person_v0_1_0.cupld
tests/fixtures/memory/aliases/: README.md  case.json
tests/fixtures/memory/basic_links/: README.md  case.json
tests/fixtures/memory/citation_metadata/: README.md  case.json
tests/fixtures/memory/frontmatter_links/: README.md  case.json
tests/fixtures/memory/normalized_graph/: README.md  case.json
tests/fixtures/memory/search_large_vault/: README.md  case.json
tests/fixtures/memory/search_relevance/: README.md  case.json
tests/support/: mod.rs
wix/: main.wxs
(+34 files in other folders)
